# kis-auto-cli

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  kis-trader.bat  main.py  pyproject.toml  requirements.txt
.claude/commands/: git-workflow.md
.claude/refs/git-workflow/: phase1-change-analysis.md  phase2-branch-commit.md  phase3-version-merge.md  phase4-cleanup.md
.doc/: 개선_할_일_목록.txt  다음_세션_프롬프트.md  세션별_작업_프롬프트.md  작업_완료_보고서.md  작업_플랜.md
docs/forge-runs/: 2026-05-15-fix-all-issues-report.md  2026-05-15-project-review-report.md  2026-05-16-backtest-module-report.md
docs/superpowers/plans/: 2026-05-02-daily-report-logs.md  2026-05-16-backtest-module.md
specs/features/backtest-module/: design.md
specs/features/daily-report-logs/: design.md  review-final.md  tasks.md
src/: analyzer.py  auth.py  backtest_reporter.py  backtester.py  combined.py  config.py  fetcher.py  logger.py  reporter.py  risk.py  scalper.py  scheduler.py  signals.py  trader.py
tests/: test_analyzer.py  test_backtester.py  test_config.py  test_exposure_and_unfilled.py  test_heartbeat_compact.py  test_intervals_from_env.py  test_periodic_reconcile.py  test_reporter.py  test_risk.py  test_scalper_risk.py  test_scheduler.py  test_scheduler_report.py  test_signal_handlers.py  test_startup_perf.py  test_token_lock.py
